posting and get works

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -14,10 +14,18 @@ input {
     text-align: center;
 }
 
-#tweet-container {
-    text-align: center;
-}
-
 #tweet_list {
     list-style: none;
+}
+
+li {
+    padding: 10px 0 10px 0;  
+}
+
+#tweet-container {
+    background-color: #23c5e3;
+    width: 75%;
+    margin: 0 auto;
+    border-radius: 10px;
+    text-align: center;
 }
